# python-fuelclient

./: .gitignore  .gitreview  .testr.conf  0001-Support-specifying-multiple-certain-tests.patch  CONTRIBUTING.rst  MAINTAINERS  MANIFEST.in  README.rst  groups  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  test.txt  tox.ini
debian/: changelog  control  copyright  rules
fuelclient/: __init__.py  client.py  consts.py  fuel_client.yaml  fuelclient_settings.py  fuelclient_settings.yaml  hooks.py  logs.py  main.py  profiler.py  utils.py
fuelclient/actions/: fuel_version.py  help.py
fuelclient/cli/: __init__.py  arguments.py  error.py  formatting.py  parser.py  serializers.py  translate.py  utils.py
fuelclient/cli/actions/: __init__.py  base.py  deploy.py  deployment_tasks.py  environment.py  fact.py  fuelversion.py  gettoken.py  graph.py  health.py  inteface_names.py  interrupt.py  network.py  network_group.py  node.py  nodegroup.py  notifications.py  openstack_config.py  plugins.py  release.py  role.py  settings.py  snapshot.py  task.py  token.py  user.py  vip.py
fuelclient/commands/: base.py  environment.py  extension.py  fuelversion.py  graph.py  health.py  help.py  network_group.py  network_template.py  node.py  openstack_config.py  plugins.py  release.py  role.py  sequence.py  snapshot.py  tag.py  task.py  vip.py
fuelclient/common/: data_utils.py  labels_filter.py  mixins.py  os_utils.py  utils.py
fuelclient/objects/: __init__.py  base.py  deployment_history.py  environment.py  extension.py  fuelversion.py  graph.py  health.py  network_group.py  node.py  nodegroup.py  notifications.py  openstack_config.py  plugins.py  release.py  rest_obj.py  role.py  sequence.py  tag.py  task.py
fuelclient/tests/: base.py  test_attributes_actions.py  test_client.py  test_deployment_tasks_actions.py  test_environment.py  test_graph_action.py  test_nodes_execute_tasks.py  test_notifications_action.py  test_plugins_action.py  test_plugins_object.py  test_roles.py  test_settings.py  test_snapshot.py  test_token_action.py  test_utils.py
fuelclient/tests/cli/: test_env.py  test_node.py  test_task.py  test_v2_engine.py
fuelclient/tests/client_v2/cli/: test_v2_engine.py
fuelclient/tests/common/unit/: test_network_template.py  test_utils.py
fuelclient/tests/functional/: base.py
fuelclient/tests/functional/v1/: test_client.py
fuelclient/tests/functional/v2/: test_client.py
fuelclient/tests/lib/: test_api.py  test_environment.py  test_node.py  test_task.py
fuelclient/tests/unit/common/: test_config.py  test_environments.py  test_errors.py  test_labels_filter.py  test_network_template.py  test_release.py  test_serializers.py  test_settings.py  test_translator.py  test_utils.py
fuelclient/tests/unit/v1/: base.py  test_attributes_actions.py  test_authentication.py  test_base_action.py  test_deployment_history_action.py  test_deployment_tasks_actions.py  test_endpoint.py  test_environment.py  test_fuel_version.py  test_graph_action.py  test_network_groups.py  test_networks_action.py  test_nodegroups.py  test_nodes.py  test_nodes_env_assignment.py  test_nodes_execute_tasks.py  test_nodes_general_action.py  test_notifications_action.py  test_openstack_config.py  test_parser.py  test_performance.py  test_plugins_action.py  test_plugins_object.py  test_release_networks_action.py  test_roles.py  test_snapshot.py  test_token_action.py  test_user_action.py  test_vip_action.py
fuelclient/tests/unit/v2/: base_test_case.py
fuelclient/tests/unit/v2/cli/: test_deployment_graph.py  test_engine.py  test_env.py  test_error_reporting.py  test_extension.py  test_fuel_version.py  test_health.py  test_network_group.py  test_network_template.py  test_node.py  test_openstack_config.py  test_plugins.py  test_release.py  test_role.py  test_sequences.py  test_snapshot.py  test_tag.py  test_task.py  test_vip.py
fuelclient/tests/unit/v2/lib/: test_api.py  test_client.py  test_cluster_settings.py  test_deployment_graph.py  test_deployment_history.py  test_deployment_info.py  test_environment.py  test_extension.py  test_fuel_version.py  test_health.py  test_network_configuration.py  test_network_group.py  test_network_template.py  test_node.py  test_openstack_config.py  test_plugins.py  test_release.py  test_role.py  test_sequence.py  test_snapshot.py  test_tag.py  test_task.py  test_task_additional_info.py  test_task_snapshot.py  test_vip.py
fuelclient/tests/utils/: __init__.py  fake_additional_info.py  fake_deployment_history.py  fake_env.py  fake_extension.py  fake_fuel_version.py  fake_health.py  fake_net_conf.py  fake_network_group.py  fake_node.py  fake_node_group.py  fake_openstack_config.py  fake_plugin.py  fake_release.py  fake_role.py  fake_tag.py  fake_task.py  random_data.py
fuelclient/tests/v1/integration/: test_client.py
fuelclient/tests/v1/unit/: test_authentication.py  test_base_action.py  test_deployment_tasks_actions.py  test_environment.py  test_fuel_version.py  test_network_groups.py  test_networks_action.py  test_nodegroups.py  test_nodes_execute_tasks.py  test_notifications_action.py  test_parser.py  test_performance.py  test_plugins_action.py  test_plugins_object.py  test_roles.py  test_settings.py  test_snapshot.py  test_token_action.py  test_user_action.py
fuelclient/tests/v1/unit_tests/: test_deployment_tasks_actions.py  test_utils.py
fuelclient/tests/v2/unit/cli/: test_engine.py  test_env.py  test_fuel_version.py  test_network_group.py  test_network_template.py  test_node.py  test_task.py  test_v2_engine.py
fuelclient/tests/v2/unit/lib/: test_api.py  test_environment.py  (+5 more)
fuelclient/v1/: __init__.py  base_v1.py  cluster_settings.py  deployment_history.py  deployment_info.py  environment.py  error.py  extension.py  fuelversion.py  graph.py  health.py  network_configuration.py  network_group.py  node.py  openstack_config.py  plugins.py  release.py  role.py  sequence.py  snapshot.py  tag.py  task.py  vip.py
specs/: python-fuelclient.spec
tools/: cleanup.py  cleanup.sh  env.sh  env_functions.sh  prepare_nailgun.sh
