[metadata]
name = python-fuelclient
version = 8.0.0
summary = Command line interface and Python API wrapper for Fuel.
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuelclient

[entry_points]
console_scripts =
    fuel=fuelclient.cli.parser:main
    fuel2=fuelclient.main:main

fuelclient =
    env_add_nodes=fuelclient.commands.environment:EnvAddNodes
    env_remove_nodes=fuelclient.commands.environment:EnvRemoveNodes
    env_create=fuelclient.commands.environment:EnvCreate
    env_delete=fuelclient.commands.environment:EnvDelete
    env_deploy=fuelclient.commands.environment:EnvDeploy
    env_list=fuelclient.commands.environment:EnvList
    env_show=fuelclient.commands.environment:EnvShow
    env_spawn-vms=fuelclient.commands.environment:EnvSpawnVms
    env_update=fuelclient.commands.environment:EnvUpdate
    env_upgrade=fuelclient.commands.environment:EnvUpgrade
    fuel-version=fuelclient.commands.fuelversion:FuelVersion
    network-group_create=fuelclient.commands.network_group:NetworkGroupCreate
    network-group_delete=fuelclient.commands.network_group:NetworkGroupDelete
    network-group_list=fuelclient.commands.network_group:NetworkGroupList
    network-group_show=fuelclient.commands.network_group:NetworkGroupShow
    network-group_update=fuelclient.commands.network_group:NetworkGroupUpdate
    network-template_delete=fuelclient.commands.network_template:NetworkTemplateDelete
    network-template_download=fuelclient.commands.network_template:NetworkTemplateDownload
    network-template_upload=fuelclient.commands.network_template:NetworkTemplateUpload
    node_create-vms-conf=fuelclient.commands.node:NodeCreateVMsConf
    node_label_delete=fuelclient.commands.node:NodeLabelDelete
    node_label_list=fuelclient.commands.node:NodeLabelList
    node_label_set=fuelclient.commands.node:NodeLabelSet
    node_list-vms-conf=fuelclient.commands.node:NodeVmsList
    node_list=fuelclient.commands.node:NodeList
    node_show=fuelclient.commands.node:NodeShow
    node_update=fuelclient.commands.node:NodeUpdate
    plugins_sync=fuelclient.commands.plugins:PluginsSync
    task_list=fuelclient.commands.task:TaskList
    task_show=fuelclient.commands.task:TaskShow

[global]
setup-hooks =
    pbr.hooks.setup_hook
    fuelclient.hooks.setup_hook

[wheel]
python-tag = py2
