[metadata]
name = python-fuelclient
version = 10.0.0
summary = Command line interface and Python API wrapper for Fuel.
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuelclient

[entry_points]
console_scripts =
    fuel=fuelclient.cli.parser:main
    fuel2=fuelclient.main:main

fuelclient =
    env_add_nodes=fuelclient.commands.environment:EnvAddNodes
    env_create=fuelclient.commands.environment:EnvCreate
    env_delete=fuelclient.commands.environment:EnvDelete
    env_deploy=fuelclient.commands.environment:EnvDeploy
    env_deployment-facts_delete=fuelclient.commands.environment:EnvDeploymentFactsDelete
    env_deployment-facts_download=fuelclient.commands.environment:EnvDeploymentFactsDownload
    env_deployment-facts_get-default=fuelclient.commands.environment:EnvDeploymentFactsGetDefault
    env_deployment-facts_upload=fuelclient.commands.environment:EnvDeploymentFactsUpload
    env_list=fuelclient.commands.environment:EnvList
    env_network_download=fuelclient.commands.environment:EnvNetworkDownload
    env_network_upload=fuelclient.commands.environment:EnvNetworkUpload
    env_network_verify=fuelclient.commands.environment:EnvNetworkVerify
    env_nodes_deploy=fuelclient.commands.environment:EnvDeployNodes
    env_nodes_provision=fuelclient.commands.environment:EnvProvisionNodes
    env_provisioning-facts_delete=fuelclient.commands.environment:EnvProvisioningFactsDelete
    env_provisioning-facts_download=fuelclient.commands.environment:EnvProvisioningFactsDownload
    env_provisioning-facts_get-default=fuelclient.commands.environment:EnvProvisioningFactsGetDefault
    env_provisioning-facts_upload=fuelclient.commands.environment:EnvProvisioningFactsUpload
    env_redeploy=fuelclient.commands.environment:EnvRedeploy
    env_remove_nodes=fuelclient.commands.environment:EnvRemoveNodes
    env_reset=fuelclient.commands.environment:EnvReset
    env_settings_download=fuelclient.commands.environment:EnvSettingsDownload
    env_settings_upload=fuelclient.commands.environment:EnvSettingsUpload
    env_show=fuelclient.commands.environment:EnvShow
    env_spawn-vms=fuelclient.commands.environment:EnvSpawnVms
    env_stop-deployment=fuelclient.commands.environment:EnvStopDeploy
    env_update=fuelclient.commands.environment:EnvUpdate
    fuel-version=fuelclient.commands.fuelversion:FuelVersion
    graph_download=fuelclient.commands.graph:GraphDownload
    graph_execute=fuelclient.commands.graph:GraphExecute
    graph_list=fuelclient.commands.graph:GraphList
    graph_upload=fuelclient.commands.graph:GraphUpload
    health_check=fuelclient.commands.health:HealthCheck
    health_list=fuelclient.commands.health:HealthTestSetsList
    health_status_list=fuelclient.commands.health:HealthTestSetsStatusList
    health_status_show=fuelclient.commands.health:HealthTestSetsStatusShow
    network-group_create=fuelclient.commands.network_group:NetworkGroupCreate
    network-group_delete=fuelclient.commands.network_group:NetworkGroupDelete
    network-group_list=fuelclient.commands.network_group:NetworkGroupList
    network-group_show=fuelclient.commands.network_group:NetworkGroupShow
    network-group_update=fuelclient.commands.network_group:NetworkGroupUpdate
    network-template_delete=fuelclient.commands.network_template:NetworkTemplateDelete
    network-template_download=fuelclient.commands.network_template:NetworkTemplateDownload
    network-template_upload=fuelclient.commands.network_template:NetworkTemplateUpload
    node_ansible-inventory=fuelclient.commands.node:NodeAnsibleInventory
    node_attributes-download=fuelclient.commands.node:NodeAttributesDownload
    node_attributes-upload=fuelclient.commands.node:NodeAttributesUpload
    node_create-vms-conf=fuelclient.commands.node:NodeCreateVMsConf
    node_interfaces_download=fuelclient.commands.node:NodeInterfacesDownload
    node_interfaces_get-default=fuelclient.commands.node:NodeInterfacesGetDefault
    node_interfaces_upload=fuelclient.commands.node:NodeInterfacesUpload
    node_disks_download=fuelclient.commands.node:NodeDisksDownload
    node_disks_get-default=fuelclient.commands.node:NodeDisksGetDefault
    node_disks_upload=fuelclient.commands.node:NodeDisksUpload
    node_label_delete=fuelclient.commands.node:NodeLabelDelete
    node_label_list=fuelclient.commands.node:NodeLabelList
    node_label_set=fuelclient.commands.node:NodeLabelSet
    node_list-vms-conf=fuelclient.commands.node:NodeVmsList
    node_list=fuelclient.commands.node:NodeList
    node_show=fuelclient.commands.node:NodeShow
    node_undiscover = fuelclient.commands.node:NodeUndiscover
    node_update=fuelclient.commands.node:NodeUpdate
    openstack-config_delete=fuelclient.commands.openstack_config:OpenstackConfigDelete
    openstack-config_download=fuelclient.commands.openstack_config:OpenstackConfigDownload
    openstack-config_execute=fuelclient.commands.openstack_config:OpenstackConfigExecute
    openstack-config_list=fuelclient.commands.openstack_config:OpenstackConfigList
    openstack-config_upload=fuelclient.commands.openstack_config:OpenstackConfigUpload
    plugins_list=fuelclient.commands.plugins:PluginsList
    plugins_sync=fuelclient.commands.plugins:PluginsSync
    release_component_list=fuelclient.commands.release:ReleaseComponentList
    release_list=fuelclient.commands.release:ReleaseList
    release_repos_list=fuelclient.commands.release:ReleaseReposList
    release_repos_update=fuelclient.commands.release:ReleaseReposUpdate
    role_create=fuelclient.commands.role:RoleCreate
    role_delete=fuelclient.commands.role:RoleDelete
    role_download=fuelclient.commands.role:RoleDownload
    role_list=fuelclient.commands.role:RoleList
    role_update=fuelclient.commands.role:RoleUpdate
    task_delete=fuelclient.commands.task:TaskDelete
    task_deployment-info_download=fuelclient.commands.task:TaskDeploymentInfoDownload
    task_history_show=fuelclient.commands.task:TaskHistoryShow
    task_list=fuelclient.commands.task:TaskList
    task_network-configuration_download=fuelclient.commands.task:TaskNetworkConfigurationDownload
    task_settings_download=fuelclient.commands.task:TaskClusterSettingsDownload
    task_show=fuelclient.commands.task:TaskShow
    sequence_create=fuelclient.commands.sequence:SequenceCreate
    sequence_delete=fuelclient.commands.sequence:SequenceDelete
    sequence_download=fuelclient.commands.sequence:SequenceDownload
    sequence_execute=fuelclient.commands.sequence:SequenceExecute
    sequence_list=fuelclient.commands.sequence:SequenceList
    sequence_show=fuelclient.commands.sequence:SequenceShow
    sequence_update=fuelclient.commands.sequence:SequenceUpdate
    sequence_upload=fuelclient.commands.sequence:SequenceUpload
    snapshot_create=fuelclient.commands.snapshot:SnapshotGenerate
    snapshot_get-default-config=fuelclient.commands.snapshot:SnapshotConfigGetDefault
    snapshot_get-link=fuelclient.commands.snapshot:SnapshotGetLink
    vip_create=fuelclient.commands.vip:VipCreate
    vip_download=fuelclient.commands.vip:VipDownload
    vip_upload=fuelclient.commands.vip:VipUpload

[global]
setup-hooks =
    pbr.hooks.setup_hook
    fuelclient.hooks.setup_hook

[wheel]
python-tag = py2
